<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Tittles -->
    <string name="app_name">MustSee</string>

    <!-- Labels -->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account yet? Register!</string>
    <string name="description">Description</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment:</string>

    <!-- Hints -->
    <string name="hint_user_name">Enter your user name</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_comment">Insert your comment</string>

    <!-- Buttons -->
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>

    <!-- Error and Warning Messages -->
    <string name="error_db">Database error</string>
    <string name="update_from">Updating database from version</string>
    <string name="update_to">to version</string>
    <string name="error_no_text">Error, there is no text to send</string>
    <string name="post_error">Error posting comment, please retry.</string>
    <string name="auth_error">Authentication error</string>
    <string name="download_error">Error downloading data, please try again later.</string>

    <!-- Dialogs -->
    <string name="dialog_wait">Please wait...</string>

    <!-- Messages -->
    <string name="comentari_send">Comment send</string>
    <string name="auth_success">You are now authenticated</string>
    <string name="show_all_llocs">Show all</string>



</resources>
